<resources>
    <string name="app_name">MenPas</string>
    <string name="introducir_datos">Introduzca sus datos</string>
    <string name="email">Email</string>
    <string name="rep_contrasenya">Repetir contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="terminos_txt">He leído y acepto las Condiciones y Términos de Uso</string>
    <string name="registrar">Registrar usuario</string>
    <string name="posee_cuenta">¿Ya posee una cuenta?</string>
    <string name="inicie_sesion">Inicie sesión aquí</string>
    <string name="mostrar_ocultar_contrasenya">Mostrar/ocultar contraseña</string>
    <string name="mostrar_ocultar_rep_contrasenya">mostrar_ocultar_rep_contrasenya</string>
    <string name="edad">Edad</string>
    <string name="genero">Género</string>
    <string-array name="genero_array">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
    <string-array name="deportes_array">
        <item>Fútbol</item>
        <item>Baloncesto</item>
        <item>Golf</item>
    </string-array>
    <string-array name="nacionalidad_array">
        <item>España</item>
        <item>Portugal</item>
        <item>Francia</item>
    </string-array>
    <string-array name="estadoCivil_array">
        <item>Soltero/a</item>
        <item>Casado/a</item>
        <item>Divorciado/a</item>
        <item>Viudo/a</item>
    </string-array>
    <string-array name="nivelEstudios_array">
        <item>Sin estudios</item>
        <item>Estudios primarios (EGB o FP1)</item>
        <item>Estudios medios (BUP o FP2)</item>
        <item>Estudios superiores</item>
    </string-array>
    <string-array name="horasSemanaDeporte_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
    </string-array>
    <string-array name="profesion_array">
        <item>Ama de casa</item>
        <item>Empleado cuenta ajena</item>
        <item>Empleado cuenta propia</item>
        <item>Enfermero</item>
    </string-array>
    <string name="deporte_practicado">Deporte practicado</string>
    <string name="repetir_email">Repetir email</string>
    <string name="grupo">Grupo</string>
    <string name="ano_comienzo_deporte">Año comienzo deporte</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="estado_civil">Estado civil</string>
    <string name="nivel_estudios">Nivel estudios</string>
    <string name="horas_de_deporte_a_la_semana">Horas de deporte a la semana</string>
    <string name="profesion">Profesión</string>
    <string name="me_gustaria_recibir_informacion_por_email">Me gustaría recibir información por email</string>
    <string name="modificar_datos">Modificar datos</string>
    <string name="centros">Centros</string>
    <string name="cambio_de_perfil">Cambio de perfil</string>
    <string name="dar_de_baja">Dar de baja</string>
    <string name="modificar_datos_icono">Modificar datos icono</string>
    <string name="consultar_estadisticas_icono">consultar estadisticas icono</string>
    <string name="registrar_centro_icono">registrar centro icono</string>
    <string name="cambio_de_perfil_icono">cambio de perfil icono</string>
    <string name="dar_de_baja_icono">dar de baja icono</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="icono_cambio_perfil">icono_cambio_perfil</string>
    <string name="icono_consultar_estadisticas">icono_consultar_estadisticas</string>
    <string name="icono_dar_baja">icono_dar_baja</string>
    <string name="icono_modificar_datos">icono_modificar_datos</string>
    <string name="icono_registrar_centro">icono_registrar_centro</string>
    <string name="icono_dudas_y_sugerencias">icono dudas y sugerencias</string>
    <string name="dudas_y_sugerencias">Dudas y sugerencias</string>
    <string name="autores_icon">autores icon</string>
    <string name="autores">Autores</string>
    <string name="icono_areas">icono areas</string>
    <string name="areas">Áreas</string>
    <string name="icono_faq">icono faq</string>
    <string name="faq">FAQ</string>
    <string name="icono_referencias">icono referencias</string>
    <string name="referencias">Referencias</string>
    <string name="icono_novedades">icono novedades</string>
    <string name="novedades">Novedades</string>
    <string name="documentacion_areas">Documentación de áreas</string>
    <string name="universidad_de_malaga_mayusculas">UNIVERSIDAD DE MÁLAGA</string>
    <string name="inicie_sesion_para_continuar">Inicie sesión para continuar</string>
    <string name="bienvenido">¡Bienvenido/a!</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenya">Contraseña</string>
    <string name="olvido_su_contrasenya">¿Olvidó su contraseña?</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="nuevo_en_la_plataforma">¿Nuevo en la plataforma?</string>
    <string name="registrese_aqui">Regístrese aquí</string>
    <string name="cuestionarios_anonimos">Cuestionarios anónimos</string>
    <string name="datos_incorrectos">Los datos introducidos no son correctos</string>
    <string name="o">ó</string>
    <string name="logo_menpas">Logo de Menpas</string>
    <string name="logo_uma">Logo de la UMA</string>
    <string name="dejenos_ayudarle">Déjenos ayudarle:</string>
    <string name="informacion">Recibirá un correo con su nombre de usuario y su contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="datos_personales">Datos personales</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="suscripcion_a_correo_electronico">Suscripción a correo electrónico</string>
    <string name="baja_de_usuario">Baja de usuario</string>
    <string name="motivo_baja">Por favor, indique los motivos de su baja</string>
    <string name="darse_de_baja">Darse de baja</string>
    <string name="aviso_baja">Recuerde que una vez dado de baja no podrá volver a acceder</string>
    <string-array name="motivos_baja_array">
        <item>Problemas técnicos o de acceso a la plataforma</item>
        <item>Ya no quiero recibir más información</item>
        <item>Ya no me interesa su contenido</item>
        <item>Ya no uso la plataforma</item>
        <item>Otros</item>
    </string-array>
    <string name="bienvenido_principal">Bienvenido/a,</string>
    <string name="areas_trabajo">Áreas de trabajo</string>
    <string name="autorregistro">Autorregistro</string>
    <string name="ansiedad">Ansiedad</string>
    <string name="autoconcepto">Autoconcepto</string>
    <string name="atencion">Atención</string>
    <string name="busqueda_talentos">Búsqueda de talentos</string>
    <string name="burnout">Burnout</string>
    <string name="dinamica_grupal">Dinámica grupal</string>
    <string name="calidad_vida">Calidad de vida</string>
    <string name="inteligencia_emocional">Inteligencia emocional</string>
    <string name="entrenamiento_mental">Entrenamiento mental</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="centros_registrados">Centros registrados</string>
    <string name="ver_informacion_del_centro">Ver información del centro</string>
    <string name="informacion_del_centro">Información del centro</string>
    <string name="cp">CP:</string>
    <string name="nombre2puntos">Nombre:</string>
    <string name="pais2puntos">País:</string>
    <string name="direccion2puntos">Dirección:</string>
    <string name="telefono2puntos">Teléfono:</string>
    <string name="boton_cerrar_desplegable">Boton cerrar desplegable</string>
    <string name="cuestionarios_realizados">Cuestionarios realizados</string>
    <string name="ver_informacion_del_cuestionario">Ver información del cuestionario</string>
    <string name="coordinador">Coordinador:</string>
    <string name="jose_luis">José Luis Pastrana Brincones</string>
    <string name="antonio_hernandez">Antonio Hernández Mendo</string>
    <string name="email_jose_luis">pastrana@lcc.uma.es</string>
    <string name="email_antonio">mendo@uma.es</string>
    <string name="desarrolladores">Desarrolladores:</string>
    <string name="manuel_gomez">Manuel Antonio Gómez Merino</string>
    <string name="daniel_melero">Daniel Melero García</string>
    <string name="miguel_cabanillas">Miguel Ángel Cabanillas Silva</string>
    <string name="francisco_bono">Francisco María Bono Navarro</string>
    <string name="email_manuel_gomez">manuel.agm@uma.es</string>
    <string name="email_daniel_melero">danijlg92@uma.es</string>
    <string name="email_miguel_cabanillas">miguelangelcabanillassilva@uma.es</string>
    <string name="email_francisco_bono">franbono2@alu.uma.es</string>
    <string name="detalles">Detalles</string>
    <string name="cuestionario">Cuestionario:</string>
    <string name="categoria">Categoría:</string>
    <string name="tipo">Tipo:</string>
    <string name="fecha">Fecha:</string>
    <string name="tiempo">Tiempo:</string>
    <string name="resultados">Resultados:</string>
    <string name="icono_cerrar">icono_cerrar</string>
    <string name="texto_de_prueba_cuestionario">Cuestionario</string>
    <string name="texto_de_prueba_categoria">Autoconcepto</string>
    <string name="texto_de_prueba_tipo">AF5</string>
    <string name="texto_de_prueba_fecha">11/02/2023-11:07:32</string>
    <string name="texto_de_prueba_tiempo">198 segundos</string>
    <string name="texto_de_prueba_resultados">Académico: 6,57</string>
    <string name="primera_referencia">González Ruiz, S. L., Hernández Mendo, A., Pastrana Brincones, J.L. (2010). Herramienta software para la evaluación psicosocial de deportistas y entornos deportivos. Lecturas: EF y Deportes. Revista Digital, 15 (144), mayo.</string>
    <string name="segunda_referencia">González Ruiz, S. L., Gómez Gallego, I., Pastrana Brincones , J.L., Hernández-Mendo, A. (2015). Algoritmos de clasificación y redes neuronales en la observación automatizada de registros. Cuadernos de Psicología del Deporte, 15(1), 31 -40.</string>
    <string name="tercera_referencia">González-Ruiz, S.L., Domínguez-Alfonso, R., Chica-Merino, E., Pastrana-Brincones, J.L.;Hernández-Mendo, A. (2018). Una plataforma virtual para la evaluación e investigación on-line: MenPas. Cuadernos de Psicología del Deporte, 18(3), 26-48.</string>
    <string name="cuarta_referencia">Pastrana JL, Reigal RE, Morales-Sánchez V, Morillo-Baro JP, Juárez-Ruiz de Mier R, Alves J and Hernández-Mendo A (2019) Data Mining in the Mixed Methods: Application to the Study of the Psychological Profiles of Athletes. Front. Psychol. 10:2675.</string>
    <string name="quinta_referencia">Reigal, R.E.; González-Guirval, F.; Pastrana-Brincones, J.L.; González-Ruiz, S.; Hernández-Mendo, A.; Morales-Sánchez, V. (2020). Analysis of Reliability and Generalizability of One Instrument for Assessing Visual Attention Span: MenPas Mondrian Color. Sustainability, 12, 7655.</string>
    <string name="registrar_centro">Registrar centro</string>
    <string name="boton_cerrar_cuestionario">boton cerrar cuestionario</string>
    <string name="comenzar">Comenzar</string>
    <string name="cadenaFormato">mm:ss (max 30:00)</string>
    <string name="formato">Formato:</string>
    <string name="hintFormato">mm:ss</string>
    <string name="tiempo_de_realizacion">Tiempo de realización</string>
    <string name="modrian_parejas">Modrian Parejas</string>
</resources>