<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <View
        android:id="@+id/bannerRectanguloAzul"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/azul_banner_cuestionarios" />

    <View
        android:id="@+id/ellipse_45"
        android:layout_width="230dp"
        android:layout_height="210dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-160dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/elipse_45" />

    <View
        android:id="@+id/ellipse_46"
        android:layout_width="170dp"
        android:layout_height="153dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-130dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/elipse_46" />

    <ImageButton
        android:id="@+id/imageButtonCerrarCuestionario"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#9CD3ED"
        android:contentDescription="@string/boton_cerrar_cuestionario"
        android:rotation="45"
        android:src="@drawable/icon_cruz" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:id="@+id/textPregunta"
        android:layout_below="@id/ellipse_45"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/dark_blue"
        android:textSize="28sp"
        android:text="@string/modrian_parejas" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollModrianParejas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"

        android:layout_below="@id/bannerRectanguloAzul"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp"
                android:layout_marginStart="15dp"
                android:textAlignment="center"
                android:id="@+id/textTiempoRealizacion"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:text="@string/tiempo_de_realizacion" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/textTiempoRealizacion"
                android:background="@color/line_grey"
                android:orientation="horizontal" />

            <EditText
                android:id="@+id/editTextTiempoRealizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_below="@id/textTiempoRealizacion"
                android:backgroundTint="@color/line_grey"
                android:fontFamily="@font/poppins_regular"
                android:fontWeight="400"
                android:hint="@string/hintFormato"
                android:inputType="time"
                android:textSize="14sp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:textAlignment="center"
                android:id="@+id/textFormato"
                android:layout_below="@+id/editTextTiempoRealizacion"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:text="@string/formato"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textAlignment="center"
                android:id="@+id/textFormatoMax"
                android:layout_toEndOf="@+id/textFormato"
                android:layout_alignBottom="@id/textFormato"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                android:text="@string/cadenaFormato" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>



    <Button
        android:id="@+id/buttonComenzar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nestedScrollModrianParejas"
        android:layout_marginTop="100dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins_bold"
        android:fontWeight="400"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/comenzar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal" />

</RelativeLayout>